[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "geocodegenerator"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
googlemaps = "^4.2"
neomodel = "^3.3"
[tool.poetry.dev-dependencies]
